[package]
name = "project-tesla"
version = "0.3.2"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.60"
clap = "4.0.32"
env_logger = "0.10"
log = "0.4"
serde = "1.0"
serde-teamspeak-querystring = { path = "serde-teamspeak-querystring" }
serde_derive = "1.0"
serde_json = "1.0.91"
tokio = { version = "1.24", features = ["full"] }
toml = "0.5.9"
rand = "0.8.5"